feat: add core infrastructure - env config, Docker, and workspace setup
- Restructure .env.example with organized sections (database, server, auth, event bus, logging)
- Update database connection defaults and add connection pool settings
- Add workspace-level package metadata (version, edition, license)
- Create Dockerfile with multi-stage build for content-lake-api
- Add content-lake-core crate with dependencies for domain logic
- Update groq crate to use workspace package metadata
- Export gro

--- a/content-lake-rs/.env.example
+++ b/content-lake-rs/.env.example
@@ -1,6 +1,19 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/content_lake
+# Database
+DATABASE_URL=postgres://contentlake:contentlake@localhost:5432/contentlake
+DB_MAX_CONNECTIONS=20
+DB_MIN_CONNECTIONS=5
+
+# Server
+HOST=0.0.0.0
+PORT=3030
+
+# Auth
 JWT_SECRET=change-me-to-a-real-secret-in-production
-HOST=127.0.0.1
-PORT=8080
-RUST_LOG=content_lake_api=debug,tower_http=debug
-ASSET_STORAGE_PATH=./uploads
+
+# Event bus
+EVENT_BUS_CAPACITY=1024
+
+# Logging
+LOG_LEVEL=info
+# Or use RUST_LOG for fine-grained control:
+# RUST_LOG=content_lake_api=debug,tower_http=debug
