--- a/content-lake-rs/Cargo.toml
+++ b/content-lake-rs/Cargo.toml
@@ -6,6 +6,11 @@ members = [
     "crates/groq",
 ]
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+license = "MIT"
+
 [workspace.dependencies]
 # Async runtime
 tokio = { version = "1.43", features = ["full"] }
